libquantumida/g0/quantum_phase_kick
gates.c:365:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:543:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:1238:1: error: use of undeclared identifier 'SFtype'
SFtype v3; // xmm4_4 
^
gates.c:1239:1: error: use of undeclared identifier 'complex_float'
complex_float v4; // kr00_8 
^
gates.c:1245:1: error: use of undeclared identifier 'v4'
v4 = quantum_cexp( gamma); 
^
gates.c:1251:19: error: use of undeclared identifier 'complex_float'
v5->amplitude = ( complex_float)_mulsc3( v4.real, v4.imag, v5->amplitude.real, v5->amplitude.imag, v3).m128i_u64[0]; 
                  ^
2 warnings and 4 errors generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
